# azuredeploy_container

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
