[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ZaheerAhmed <zaheer.ahmad.contact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
